added ShoppingCart.jsx, BookDetailsPage.jsx, Pagination.jsx and fetched books from catalog service

--- a/bookshop-ui/src/index.css
+++ b/bookshop-ui/src/index.css
@@ -9,7 +9,7 @@
     /* Breakpoints */
     --breakpoint-3xl: 120rem;
 
-    /* Custom Colors (your palette) */
+    /* Custom Colors */
     --color-brand-primary-yellow: #DCA44F;
     --color-brand-primary-dark: #DCA44F;
     --color-brand-secondary: #f59e0b;
